<resources>
    <string name="app_name">InventoryApp</string>
    <string name="nothing_saved">Nothing to save</string>
    <string name="no_product_name">Please input product name</string>
    <string name="no_price">Please input price</string>
    <string name="no_quantity">Please input quantity</string>
    <string name="no_phone">Please input supplier phone</string>
    <string name="no_supplier">Please input supplier</string>
    <string name="product_hint">Product name</string>
    <string name="product_text">Product name</string>
    <string name="price_text">Price</string>
    <string name="price_hint">Price</string>
    <string name="currency">EUR</string>
    <string name="quantity_text">Quantity</string>
    <string name="quantity_hint">Quantity</string>
    <string name="supplier_text">Name of supplier</string>
    <string name="supplier_hint">Supplier name</string>
    <string name="phone_text">Supplier phone</string>
    <string name="phone_hint">Phone number</string>
    <string name="insert_dummy">Insert dummy data</string>
    <string name="delete_all">Delete all entry</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="editor_insert_book_failed">Error with saving book</string>
    <string name="editor_insert_book_successfull">Book saved </string>
    <string name="empty_view_title_text">There are no products</string>
    <string name="empty_view_subtitle_text">Please insert a new book</string>
    <string name="editor_add_books">Add a book</string>
    <string name="editor_edit_books">Edit book</string>
    <string name="editor_update_books_failed">Update fail</string>
    <string name="editor_update_books_successful">Update successful</string>
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>
    <string name="discard">Discard</string>
    <string name="keep_editing">Keep Editing</string>
    <string name="editor_delete_books_successful">Book deleted</string>
    <string name="editor_delete_books_failed">Error with deleting book</string>
    <string name="delete_dialog_msg">Are you sure you want to delete this book?</string>
    <string name="cancel">Cancel</string>
    <string name="delete_all_dialog_msg">Are you sure you want to delete all books?</string>
    <string name="currencyTextList"> €</string>
    <string name="quantityTextList">Quantity: </string>
    <string name="no_books">This book is out of stock</string>
    <string name="quantity_no_less_then_0">Quantity can\'t be less than 0</string>
    <string name="call_supplier">Call supplier</string>
    <string name="no_call">Please insert phone number</string>

</resources>
