<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_margin"
    tools:context=".EditorActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/TextViews"
            android:text="@string/product_text" />

        <EditText
            android:id="@+id/product_name"
            style="@style/EditorFieldStyle"
            android:hint="@string/product_hint"
            android:inputType="textCapWords" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <TextView
            style="@style/TextViews"
            android:text="@string/price_text" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="4dp"
            android:paddingStart="4dp">

            <EditText
                android:id="@+id/price"
                style="@style/EditorFieldStyle"
                android:hint="@string/price_hint"
                android:inputType="numberDecimal" />

            <TextView
                android:id="@+id/EUR"
                style="@style/TextViews"
                android:layout_alignEnd="@id/price"
                android:layout_alignRight="@id/price"
                android:text="@string/currency" />

        </RelativeLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/TextViews"
            android:text="@string/quantity_text" />

        <ImageView
            android:id="@+id/minus"
            android:layout_width="39dp"
            android:layout_height="match_parent"
            android:src="@drawable/icon_minus" />

        <EditText
            android:id="@+id/quantity"
            style="@style/EditorFieldStyle"
            android:layout_width="wrap_content"
            android:hint="@string/quantity_hint"
            android:inputType="textCapWords" />

        <ImageView
            android:id="@+id/plus"
            android:layout_width="39dp"
            android:layout_height="match_parent"
            android:src="@drawable/icon_plus" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/TextViews"
            android:text="@string/supplier_text" />

        <EditText
            android:id="@+id/supplier_name"
            style="@style/EditorFieldStyle"
            android:hint="@string/supplier_hint"
            android:inputType="textCapWords" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/TextViews"
            android:text="@string/phone_text" />

        <EditText
            android:id="@+id/supplier_phone"
            style="@style/EditorFieldStyle"
            android:hint="@string/phone_hint"
            android:inputType="phone" />

    </LinearLayout>

</LinearLayout>



